# paperboy

./: .env.example  .flake8  .gitignore  .pylintrc  BUG_FIXES_SUMMARY.md  CODEBASE_ANALYSIS.md  Dockerfile  LOCAL_SETUP.md  Makefile  NOCTURNAL_LOG.md  QUICK_START.md  README.md  STATUS_REPORT.md  __init__.py  config.py  config.yaml  config.yaml.template  configure.py  conftest.py  dev_setup.ps1  dev_setup.sh  docker-compose.yml  documentation_report.json  email_sender.py  gui_app.py  healthcheck.py  main.py  pipeline_status.json  pyproject.toml  pytest.ini  requests.py  requirements-dev.txt  requirements.txt  requirements.txt.bak  requirements_basic.txt  requirements_minimal.txt  requirements_pinned.txt  run_newspaper.py  run_tests.py  schedule_task.ps1  (+6 more)
.github/workflows/: build_and_test.yml  schedule.yml  summary.yml  tests.yml
.idx/: dev.nix
templates/: archive.html  base.html  config_editor.html  dashboard.html  email_preview.html  email_template.html  health.html  manual_run.html
test_files/: dummy.html
tests/: __init__.py  test_config.py  test_configure.py  test_email_alert.py  test_email_sender.py  test_gui.py  test_healthcheck.py  test_main.py  test_requests_fallback.py  test_storage.py  test_storage_dryrun.py  test_thumbnail.py  test_thumbnail_new.py  test_website.py
unit_tests/: test_config_decryption.py  test_config_get.py  test_email_sender.py  test_thumbnail.py  test_website_dry_run.py
