[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newspaper-emailer"
version = "1.0.0"
description = "Automated newspaper downloader and emailer system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Newspaper Emailer Team" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "boto3==1.34.0",
  "Jinja2==3.1.6",
  "PyMuPDF==1.23.8",
  "pillow==11.3.0",
  "python-dotenv==1.0.0",
  "PyYAML==6.0.2",
  "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "coverage>=7.0.0",
  "black",
  "flake8",
]

[tool.setuptools]
include-package-data = true
py-modules = [
  "main", "config", "website", "storage", "email_sender", "thumbnail", "__init__"
]

[tool.setuptools.package-data]
"" = ["templates/*.html", "*.yaml", "*.md"]